# OpenGL-Test

./: .gitignore  CMakeLists.txt  README.md  simple.vert
include/: camera.h  fragWithUniforms.frag  mesh.h  model.h  shader.h
lib/glad/: CMakeLists.txt
lib/glad/include/: glad.h
lib/glad/src/: glad.c
lib/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/src/: Makefile  cmake_install.cmake
res/shaders/: 4-1-vertShader.vs  Colour-fragShader.fs  Colour-vertShader.vs  DirectionalLight-fragShader.fs  Materials-fragShader.fs  Materials-vertShader.vs  PointLight-fragShader.fs  PointLight-vertShader.vs  Spotlight-fragShader.fs  multiLights.fs
src/: camera.cpp  light_casters.cpp  lighting_playground.cpp  main.cpp  shader.cpp  two_triangles.cpp
